--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body, html {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-    width: 30%;
+    width: 400px;
     padding: 40px;
     text-align: center;
     padding-left: 0%;
@@ -58,8 +58,9 @@ body, html {
     font-size: 140%;
 }
 
+
 li {
-    font-size: 24px;
+    font-size: 24%;
     list-style-type: none;
 }
 
@@ -68,7 +69,7 @@ ul {
 }
 
 .info {
-    font-size: 22px;
+    font-size: 22%;
     font-style: italic
 }
 
