--- a/style.css
+++ b/style.css
@@ -25,17 +25,16 @@ body, html {
     background-color: rgba(0, 0, 0, 0.4);
     color: white;
     position: absolute;
-    border-radius: 1%;
-    border: 1px solid white;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-    width: 60%;
+    width: 40%;
     padding: 20px;
     text-align: left;
     padding-left: 10%;
     display:inline-block;
+    font-size: 500%;
 }
 
 .bg-header {
